[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/DialogBox/Scene/DialogBoxV2.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Chapter/Ch1/ch1-2/TreeDalogBox.gd" type="Script" id=2]


[node name="TreeDialogBox" type="Node2D"]
script = ExtResource( 2 )

[node name="Tree1" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( -363.354, 28.9377 )

[node name="Tree2" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( -1374.59, 2585.83 )

[node name="Tree3" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 2353.1, 649.187 )

[node name="Tree4" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 1129.44, -2205.6 )
